--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         }
         /* Estilo para el gráfico */
         canvas {
-            width: 100%;
-            height: 400px;
+            width: 70%;  /* Ancho del 70% */
+            height: 300px;  /* Altura de 300px */
+            margin: 0 auto;  /* Centrado */
+            display: block;
         }
     </style>
 </head>
